# PhySR-FNO-superresolution-on-two-phase-water-oil-filtration-problem

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: spe10_x8.yaml  synthetic_x4.yaml  synthetic_x8.yaml
notebooks/research_archive/: DB_AFNO_dataset_metrics_final.ipynb  PhySR_solver_updated.ipynb  PiRD_dataset_metrics.ipynb
scripts/: _smoke_utils.py  evaluate_all.py  train_baseline_db_afno.py  train_baseline_epinn.py  train_baseline_physr.py  train_baseline_pird.py  train_physr_fno.py
src/physr_fno/: __init__.py  config.py  data.py
src/physr_fno/evaluation/: __init__.py  metrics.py
src/physr_fno/losses/: __init__.py  physics.py
src/physr_fno/models/: __init__.py  common.py  physr_fno.py
src/physr_fno/models/baselines/: __init__.py  db_afno.py  epinn.py  physr.py  pird.py
src/physr_fno/solvers/: __init__.py  finite_volume.py
src/physr_fno_reservoir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
